--- a/Main/kioscocetec/package.json
+++ b/Main/kioscocetec/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.19",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "mercadopago": "^2.0.15",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
